# cursor-usage-monitor

./: .env  README.md  compose.yml  docker-compose.yml  example.csv  test_data.csv
.kiro/specs/cursor-usage-dashboard/: design.md  requirements.md  tasks.md
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/benches/: api_endpoints.rs  csv_parsing.rs  stats_calculation.rs
backend/src/: lib.rs  main.rs
backend/src/handlers/: health.rs  mod.rs  stats.rs  upload.rs
backend/src/models/: error.rs  mod.rs  stats.rs  usage_data.rs
backend/src/services/: csv_parser.rs  data_processor.rs  mod.rs  stats_calculator.rs
backend/src/storage/: mod.rs
backend/src/utils/: date_utils.rs  mod.rs  validation.rs
backend/tests/: load_tests.rs  memory_tests.rs  performance_tests.rs  simple_integration_tests.rs
frontend/: Dockerfile  index.html  package.json
frontend/app/: page.tsx
frontend/app/api/health/: route.ts
frontend/app/api/stats/comprehensive/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/api/upload/append/: route.ts
frontend/app/components/: ComprehensiveStats.tsx  CostBreakdownChart.tsx  FileUpload.tsx  ModelStatsTable.tsx  TokenUsageChart.tsx
frontend/app/lib/: api.ts
frontend/app/types/: index.ts
frontend/src/: App.tsx  index.css
